--- a/WinNFSServer/WinNFSServer.csproj
+++ b/WinNFSServer/WinNFSServer.csproj
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <StartupObject>WinNFSServer.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
