--- a/WinNFSServer/WinNFSServer.csproj
+++ b/WinNFSServer/WinNFSServer.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Remove="MainForm.zh-Hans-CN.resx" />
+  </ItemGroup>
+
 </Project>
